--- a/Porfolio-mobile-deskstop/portfolio-1/index.htm
+++ b/Porfolio-mobile-deskstop/portfolio-1/index.htm
@@ -5,27 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mark Anthony Villahermosa</title>
   <link rel="stylesheet" href="asset/css/style.general.css">
-  <link rel="stylesheet" media="screen and (max-width: 500px)" href="asset/css/style-mobile.css">
-  <link rel="stylesheet" media="screen and (min-width: 501px)" href="asset/css/style.deskstop.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="asset/css/style-mobile.css">
+  <link rel="stylesheet" media="screen and (min-width: 601px)" href="asset/css/style.deskstop.css">
 </head>
+
 <body>
-  <main id="main">
-    <nav>
-      <div id="logo">
-        <img id="logo-img" src="asset/img/logo-vill.png" alt="logo">
-      </div>
-      <div id="navigation">
-        <img id="menu" src="asset/img/menu.png" alt="menu">
-        <ul id="nav-link">
+  <div class="wholePage">
+
+    <nav id="navContainer">
+      <div class="logo"><img src="asset/img/logo-vill.png" alt="website logo"></div>
+      <div class="navigation">
+        <img src="asset/img/menu.png" alt="menu icon">
+        <ul class="navLink">
           <li>Home</li>
-          <li>About Me</li>
+          <li>About</li>
           <li>Projects</li>
           <li>Contacts</li>
         </ul>
       </div>
     </nav>
-  </main>
-  <footer></footer> 
-  
+
+    <main id="mainContainer">
+      <div class="circleContainer">
+        <div class="circle"><img src="asset/img/profile.png" alt="profile picture"></div>
+      </div>
+      <div class="info">
+        <h3>Hello, I,m</h3>
+        <h1>Mark Anthony</h1>
+        <h2>Computer Engineer</h2>
+        <button class="cvBtn">Download CV</button>
+        <button class="contactBtn">Contacts</button>
+      </div>
+    </main>
+
+    <div class="about">o</div>
+
+    <footer id="footerContainer">o</footer>
+  </div>
 </body>
 </html>
