added the about page content for deskstop

--- a/Porfolio-mobile-deskstop/portfolio-1/index.htm
+++ b/Porfolio-mobile-deskstop/portfolio-1/index.htm
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="asset/css/style.general.css">
   <link rel="stylesheet" media="screen and (max-width: 600px)" href="asset/css/style-mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 601px)" href="asset/css/style.deskstop.css">
+  <link rel="stylesheet" media="screen and (min-width: 900px)" href="asset/css/style-biggerD.css">
 </head>
 
 <body>
 
   <div class="wholePage">
     <div id="empty"></div>
+
     <nav id="navContainer">
       <div class="logo"><img src="asset/img/logo-vill.png" alt="website logo"></div>
       
@@ -42,7 +44,37 @@
     </main>
 
     <div id="about">
-      <h1>About Me</h1>
+      <h3>Get To Know Me More</h3>
+      <h1 id="about-me">About Me</h1>
+
+      <div id="aboutContentContainer">
+        <div id="infomation-about">
+          <div id="idcontainer"><img src="asset/img/id.jpg" alt="id picture"></div>
+          <p id="lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic tempore suscipit natus excepturi debitis maxime, officia beatae iusto doloremque eaque adipisci, nobis deserunt vitae magni porro numquam voluptate, nihil sed.</p>
+        </div>
+
+        <div id="aboutEducationSkills">
+          <div id="education">
+            <h2>Education</h2>
+            <p id="diploma">Diploma In Computer Engineering</p>
+            <p id="school" class="schoolname">Center for Industrial Technology and Enterprise</p>
+            <p class="schoolname">CITE Technical Institute Inc.</p>
+          </div>
+          <div id="skills">
+            <h2>Skills</h2>
+            <div id="scrollSkill">
+              <div><img src="asset/img/c.png" alt="c language logo"></div>
+              <div><img src="asset/img/java.png" alt="java language logo"></div>
+              <div><img src="asset/img/css.png" alt="css language logo"></div>
+              <div><img src="asset/img/html.png" alt="html language logo"></div>
+              <div><img src="asset/img/js.png" alt="js language logo"></div>
+              <div><img src="asset/img/php.png" alt="php language logo"></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
 
     <div id="project">
