--- a/Porfolio-mobile-deskstop/portfolio-1/index.htm
+++ b/Porfolio-mobile-deskstop/portfolio-1/index.htm
@@ -38,8 +38,8 @@
         <h3>Hello, I,m</h3>
         <h1>Mark Anthony</h1>
         <h2>Computer Engineer</h2>
-        <button class="cvBtn">Download CV</button>
-        <button class="contactBtn">Contact Info</button>
+        <a href="resume.htm" target="_blank"><button class="cvBtn">Download CV</button></a>
+        <a href="#footerContainer"><button class="contactBtn">Contact Info</button></a>
       </div>
     </main>
 
@@ -78,11 +78,54 @@
     </div>
 
     <div id="project">
+      <h3>Browse My Project</h3>
       <h1>Project</h1>
+      <div id="projectContainer">
+        <div id="offensemanagement">
+          <p>Offense Management</p>
+          <div><img src="asset/img/offensemanagement.png" alt="offense management"></div>
+          <a href="https://github.com/villa-mark/3F-Group6-OFFENSE_MANAGEMENT_SYSTEM" target="_blank"><button>GitHub</button></a>
+        </div>
+        <div id="guessgame">
+          <p>Guess Game</p>
+          <div><img src="asset/img/guess.png" alt="guess game"></div>
+          <a href="https://github.com/villa-mark/c-cpp/tree/main/games-cpp" target="_blank"><button>GitHub</button></a>
+        </div>
+
+        <div id="guessgame">
+          <p>ToDo List</p>
+          <div><img src="asset/img/todo.png" alt="ToDo"></div>
+          <a href="https://github.com/villa-mark/Todo-List" target="_blank"><button>GitHub</button></a>
+        </div>
+      </div>
     </div>
 
     <footer id="footerContainer">
-      <h1>Contact Informantion</h1>
+      <h3>Get In Touch</h3>
+      <h1>Contact Me</h1>
+
+      <div class="contactContainer">
+        <div id="facebookGroup" class="contactLogo">
+          <div><img src="asset/img/facebook.png" alt="facebook logo"></div>
+          <a href="https://www.facebook.com/markanthony.villahermosa.370/" target="_blank"><p>Mark Anthony Villahermosa</p></a>
+        </div>
+        <div id="emailGroup" class="contactLogo">
+          <div><img src="asset/img/email.png" alt="facebook logo"></div>
+          <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><p>mark.anthony.villahermosa.n@gmail.com</p></a>
+        </div>
+        <div id="instagramGroup" class="contactLogo">
+          <div><img src="asset/img/instagram.png" alt="facebook logo"></div>
+          <a href="https://www.instagram.com" target="_blank"><p>@itsyurboy_mark</p></a>
+        </div>
+        <div id="phoneGroup" class="contactLogo">
+          <div><img src="asset/img/phone.png" alt="facebook logo"></div>
+          <p class="num">09515838472</p>
+        </div>
+        <div id="whatsupGroup" class="contactLogo">
+          <div><img src="asset/img/whatsapp.png" alt="facebook logo"></div>
+          <p class="num">09515838472</p>
+        </div>
+      </div>
     </footer>
 
   </div>
