--- a/Porfolio-mobile-deskstop/portfolio-1/index.htm
+++ b/Porfolio-mobile-deskstop/portfolio-1/index.htm
@@ -110,19 +110,19 @@
           <a href="https://www.facebook.com/markanthony.villahermosa.370/" target="_blank"><p>Mark Anthony Villahermosa</p></a>
         </div>
         <div id="emailGroup" class="contactLogo">
-          <div><img src="asset/img/email.png" alt="facebook logo"></div>
+          <div><img src="asset/img/email.png" alt="email logo"></div>
           <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><p>mark.anthony.villahermosa.n@gmail.com</p></a>
         </div>
         <div id="instagramGroup" class="contactLogo">
-          <div><img src="asset/img/instagram.png" alt="facebook logo"></div>
+          <div><img src="asset/img/instagram.png" alt="instagram logo"></div>
           <a href="https://www.instagram.com" target="_blank"><p>@itsyurboy_mark</p></a>
         </div>
         <div id="phoneGroup" class="contactLogo">
-          <div><img src="asset/img/phone.png" alt="facebook logo"></div>
+          <div><img src="asset/img/phone.png" alt="phone logo"></div>
           <p class="num">09515838472</p>
         </div>
         <div id="whatsupGroup" class="contactLogo">
-          <div><img src="asset/img/whatsapp.png" alt="facebook logo"></div>
+          <div><img src="asset/img/whatsapp.png" alt="whatsapp logo"></div>
           <p class="num">09515838472</p>
         </div>
       </div>
