--- a/Porfolio-mobile-deskstop/portfolio-1/index.htm
+++ b/Porfolio-mobile-deskstop/portfolio-1/index.htm
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mark Anthony Villahermosa</title>
   <link rel="stylesheet" href="asset/css/style.general.css">
+  <link rel="stylesheet" href="asset/css/style-mobile.css">
+  <link rel="stylesheet" href="asset/css/style.deskstop.css">
+  <link rel="stylesheet" href="asset/css/style-biggerD.css">
+  <!-- 
   <link rel="stylesheet" media="screen and (max-width: 600px)" href="asset/css/style-mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 601px)" href="asset/css/style.deskstop.css">
-  <link rel="stylesheet" media="screen and (min-width: 900px)" href="asset/css/style-biggerD.css">
+  <link rel="stylesheet" media="screen and (min-width: 900px)" href="asset/css/style-biggerD.css"> 
+  -->
 </head>
 
 <body>
